--- a/template/manager.html
+++ b/template/manager.html
@@ -33,53 +33,70 @@
         </div>
     </nav>
     <div>
-        <section class="h-100" style="background-color: #eee">
-          <div class="container h-100">
-            <div class="row d-flex h-100">
-              <div class="row">
-                <div class="heading">
-                  <h1>Sections</h1>
-                </div>
-                <div class="row" ng-repeat="panel in panels">
-                  <div class="input-group">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Section_name"
-                      aria-label="Recipient's username"
-                      aria-describedby="basic-addon2"
-                      disabled
-                    />
-                    <button class="btn btn-outline-secondary" type="button">Edit</button>
-                    <button
-                      class="btn btn-outline-primary"
-                      type="button"
-                      ng-click="toggleDropdown(panel)"
-                    >
-                      Show
-                    </button>
-                  </div>
-                  <div class="panel panel-default" ng-show="panel.showDropdown">
-                    <div class="col-md-3">
-                      <div class="card" style="width: 18rem;">
-                        <img src="media/productImgs/apple.jpg" class="card-img-top" alt="..." />
-                        <div class="card-body">
-                          <h5 class="card-title">Apple</h5>
-                          <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                          </p>
-                          <button href="#" class="btn btn-primary" disabled>$25</button>
-                          <a href="#" class="btn btn-primary">Add item</a>
+        <section class="vh-100" style="background-color: #eee">
+            <div class="container h-100">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <div class="row">
+                                <div class="col-11">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                        Section_name
+                                    </button>
+                                </div>
+                                <div class="col-1">
+                                    <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
+                                </div>
+                            </div>                          
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <div class="row">
+                                <div class="col-11">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                        Section_name
+                                    </button>
+                                </div>
+                                <div class="col-1">
+                                    <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
+                                </div>
+                            </div>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <div class="row">
+                                <div class="col-11">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                        Section_name
+                                    </button>
+                                </div>
+                                <div class="col-1">
+                                    <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
+                                </div>
+                            </div>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </section>
-      </div>
-      
+    </div>
+
 </body>
 </html>
