--- a/template/manager.html
+++ b/template/manager.html
@@ -1,105 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopify</title>
-    <link rel="stylesheet" href="/style/managerStyle.css">
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand logo-Img" href="#">
-            <img src="media/logo.png" width="150" height="70" class="d-inline-block align-top" alt="Logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto"></ul>
-            <form class="form-inline my-2 my-lg-0 search-form">
-                <input class="form-control mr-sm-2 search-input" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light my-2 my-sm-0 search-Btn" type="submit">Search</button>
-            </form>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item login-Btn">
-                    <a class="nav-link login-Btn" href="#" ng-click="showCreateSection($event)">Create section</a>  
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item login-Btn">
-                    <a class="nav-link login-Btn" href="#" ng-click="showLoginPopup()">Logout</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand logo-Img" href="#">
+        <img
+          src="media/logo.png"
+          width="150"
+          height="70"
+          class="d-inline-block align-top"
+          alt="Logo"
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto"></ul>
+        <form class="form-inline my-2 my-lg-0 search-form">
+          <input
+            class="form-control mr-sm-2 search-input"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button
+            class="btn btn-outline-light my-2 my-sm-0 search-Btn"
+            type="submit"
+          >
+            Search
+          </button>
+        </form>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item login-Btn">
+            <a
+              class="nav-link login-Btn"
+              href="#"
+              ng-click="showCreateSection($event)"
+              >Create section</a
+            >
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item login-Btn">
+            <a class="nav-link login-Btn" href="#" ng-click="showLoginPopup()"
+              >Logout <i class="bi bi-box-arrow-left"></i></a
+            >
+          </li>
+        </ul>
+      </div>
     </nav>
     <div>
-        <section class="vh-100" style="background-color: #eee">
-            <div class="container h-100">
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <div class="row">
-                                <div class="col-11">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                        Section_name
-                                    </button>
-                                </div>
-                                <div class="col-1">
-                                    <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
-                                </div>
-                            </div>                          
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <div class="row">
-                                <div class="col-11">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                        Section_name
-                                    </button>
-                                </div>
-                                <div class="col-1">
-                                    <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
-                                </div>
-                            </div>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingThree">
-                            <div class="row">
-                                <div class="col-11">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                        Section_name
-                                    </button>
-                                </div>
-                                <div class="col-1">
-                                    <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
-                                </div>
-                            </div>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                
-                            </div>
-                        </div>
-                    </div>
+      <section class="vh-100" style="background-color: #eee">
+        <div class="container h-100">
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <div class="row">
+                  <div class="col-11">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseOne"
+                      aria-expanded="false"
+                      aria-controls="flush-collapseOne"
+                    >
+                      Section_name
+                    </button>
+                  </div>
+                  <div class="col-1">
+                    <button
+                      class="btn btn-outline-secondary"
+                      type="button"
+                      id="inputGroupFileAddon04"
+                    ><i class="bi bi-pencil-square"></i>
+                      Edit
+                    </button>
+                  </div>
                 </div>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  <div class="row flex-nowrap overflow-auto">
+                    <div class="col-md-2">
+                      <div class="card" style="width: 14rem">
+                        <i class="bi bi-plus-circle" style="height: 200px;"></i>
+                        <div class="card-body">
+                          <a href="#" class="btn btn-primary mt-">Add item</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-2">
+                      <div class="card" style="width: 14rem">
+                        <img
+                          src="media/productImgs/pineapple.jpg"
+                          class="card-img-top"
+                          alt="..."
+                        />
+                        <div class="card-body">
+                          <h5 class="card-title">Pineapple</h5>
+                          <button href="#" class="btn btn-primary" disabled>
+                            $25
+                          </button>
+                          <a href="#" class="btn btn-primary">Add item</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.26/angular-ui-router.min.js"></script>    
-    <script src="script.js"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.26/angular-ui-router.min.js"></script>
+    <script src="../script.js"></script>
+  </body>
 </html>
