--- a/template/addProduct.html
+++ b/template/addProduct.html
@@ -6,6 +6,10 @@
     <title>Shopify</title>
 </head>
 <body>
-    
+    <section class="vh-100 overflow-auto" style="background-color: #eee">
+      <div class="container h-100">
+      
+    </div>
+    </section>
 </body>
 </html>
