--- a/template/cart.html
+++ b/template/cart.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="../style/cartStyle.css">
 </head>
 <body>
-    <section class="h-100 h-custom" style="background-color: #c9e186;">
+    <section class="h-100 h-custom">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12">
               <div class="card card-registration card-registration-2" style="border-radius: 15px;">
                 <div class="card-body p-0">
                   <div class="row g-0">
-                    <div class="col-lg-8">
+                    <div class="col-lg-8" style="background-color: #c9e186;">
                       <div class="p-5">
                         <div class="d-flex justify-content-between align-items-center mb-5">
                           <h1 class="fw-bold mb-0 text-black">Shopping Cart</h1>
@@ -33,7 +33,7 @@
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                              <i class="fas fa-minus"></i>
+                              <i class="bi bi-dash"></i>
                             </button>
       
                             <input id="form1" min="0" name="quantity" value="1" type="number"
@@ -41,14 +41,14 @@
       
                             <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                              <i class="fas fa-plus"></i>
+                              <i class="bi bi-plus"></i>
                             </button>
                           </div>
                           <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                             <h6 class="mb-0">€ 44.00</h6>
                           </div>
                           <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                            <a href="#!" class="text-muted"><i class="bi bi-x"></i></a>
                           </div>
                         </div>
       
@@ -66,7 +66,7 @@
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                              <i class="fas fa-minus"></i>
+                              <i class="bi bi-dash"></i>
                             </button>
       
                             <input id="form1" min="0" name="quantity" value="1" type="number"
@@ -74,14 +74,14 @@
       
                             <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                              <i class="fas fa-plus"></i>
+                              <i class="bi bi-plus"></i>
                             </button>
                           </div>
                           <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                             <h6 class="mb-0">€ 44.00</h6>
                           </div>
                           <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                            <a href="#!" class="text-muted"><i class="bi bi-x"></i></a>
                           </div>
                         </div>
       
@@ -99,7 +99,7 @@
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                              <i class="fas fa-minus"></i>
+                              <i class="bi bi-dash"></i>
                             </button>
       
                             <input id="form1" min="0" name="quantity" value="1" type="number"
@@ -107,22 +107,21 @@
       
                             <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                              <i class="fas fa-plus"></i>
+                              <i class="bi bi-plus"></i>
                             </button>
                           </div>
                           <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                             <h6 class="mb-0">€ 44.00</h6>
                           </div>
                           <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                            <a href="#!" class="text-muted"><i class="bi bi-x"></i></i></a>
                           </div>
                         </div>
       
                         <hr class="my-4">
       
                         <div class="pt-5">
-                          <h6 class="mb-0"><a href="#!" class="text-body"><i
-                                class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
+                          <h6 class="mb-0"><a href="#!" class="text-body"><i class="bi bi-arrow-left"></i>Back to shop</a></h6>
                         </div>
                       </div>
                     </div>
