--- a/template/manager.html
+++ b/template/manager.html
@@ -6,65 +6,43 @@
     <title>Shopify</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand logo-Img" href="#">
-        <img
-          src="media/logo.png"
-          width="150"
-          height="70"
-          class="d-inline-block align-top"
-          alt="Logo"
-        />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto"></ul>
-        <form class="form-inline my-2 my-lg-0 search-form">
-          <input
-            class="form-control mr-sm-2 search-input"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button
-            class="btn btn-outline-light my-2 my-sm-0 search-Btn"
-            type="submit"
-          >
-            Search
-          </button>
-        </form>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item login-Btn">
-            <a
-              class="nav-link login-Btn"
-              href="#"
-              ng-click="showCreateSection($event)"
-              >Create section</a
-            >
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item login-Btn">
-            <a class="nav-link login-Btn" href="#" ng-click="showLoginPopup()"
-              >Logout <i class="bi bi-box-arrow-left"></i></a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand logo-Img" href="#">
+            <h2 style="color: rgb(8, 130, 89);">Shopify</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto"></ul>
+            <form class="form-inline my-2 my-lg-0 search-form">
+                <input class="form-control mr-sm-2 search-input" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light my-2 my-sm-0 search-Btn" type="submit">Search</button>
+            </form>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item login-Btn">
+                        <a class="nav-link login-Btn" href="#" ng-click="showCreateSection($event)" style="color: rgb(8, 130, 89);">
+                        Create section
+                    </a>                    
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item login-Btn">
+                    <a class="nav-link login-Btn" href="#" style="color: rgb(8, 130, 89);"><i class="bi bi-box-arrow-left"></i>Logout</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item login-Btn" ng-show="userLoggedIn">
+                    <a class="nav-link login-Btn" href="#" ng-click="logout()">
+                        <i class="bi bi-box-arrow-right"></i> Logout
+                    </a>
+                </li>
+            </ul>            
+        </div>
+    </nav>    
     <div>
       <section class="vh-100" style="background-color: #eee">
-        <div class="container h-100">
+        <div class="container h-100" style="padding-top: 100px;">
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
