--- a/template/manager.html
+++ b/template/manager.html
@@ -16,9 +16,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto"></ul>
             <form class="form-inline my-2 my-lg-0 search-form">
-                <input class="form-control mr-sm-2 search-input" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light my-2 my-sm-0 search-Btn" type="submit">Search</button>
-            </form>
+              <input class="form-control mr-sm-2 search-input" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0 search-Btn" type="submit"> <i class="bi bi-search"></i>Search</button>
+          </form>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item login-Btn">
                         <a class="nav-link login-Btn" href="#" ng-click="showCreateSection($event)" style="color: rgb(8, 130, 89);">
