--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,10 @@
   margin-right: 20px;
 }
 
+.cart-Btn{
+  margin-right: 15px;
+}
+
 .logo-Img {
   margin-left: 30px;
 }
@@ -80,7 +84,13 @@
 
 .banner{
   margin-top: 50px;
-  background-color: black; 
-  height: 500px;
-  width: 1830px;
+}
+
+.posters{
+  margin: 100px 0px;
+}
+
+.search-input:focus {
+  border-color: rgb(8, 130, 89);
+  box-shadow: 0 0 0 0.25rem rgb(8, 130, 89, 0.25);
 }
