--- a/template/cart.html
+++ b/template/cart.html
@@ -24,11 +24,11 @@
                         <div class="row mb-4 d-flex justify-content-between align-items-center">
                           <div class="col-md-2 col-lg-2 col-xl-2">
                             <img
-                              src="../media/productImgs/apple.jpg"
+                              src="../media/productImgs/pineapple.jpg"
                               class="img-fluid rounded-3" alt="Cotton T-shirt">
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                            <h6 class="text-black mb-0">Pineapple</h6>
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
@@ -57,11 +57,11 @@
                         <div class="row mb-4 d-flex justify-content-between align-items-center">
                           <div class="col-md-2 col-lg-2 col-xl-2">
                             <img
-                              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img6.webp"
+                              src="../media/productImgs/banana.jpg"
                               class="img-fluid rounded-3" alt="Cotton T-shirt">
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                            <h6 class="text-black mb-0">Banana</h6>
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
@@ -90,11 +90,11 @@
                         <div class="row mb-4 d-flex justify-content-between align-items-center">
                           <div class="col-md-2 col-lg-2 col-xl-2">
                             <img
-                              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img7.webp"
+                              src="../media/productImgs/kiwi.jpg"
                               class="img-fluid rounded-3" alt="Cotton T-shirt">
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-3">  
-                            <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                            <h6 class="text-black mb-0">Kiwi</h6>
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
