--- a/template/cart.html
+++ b/template/cart.html
@@ -21,14 +21,14 @@
                         </div>
                         <hr class="my-4">
       
-                        <div class="row mb-4 d-flex justify-content-between align-items-center">
+                        <div class="row mb-4 d-flex justify-content-between align-items-center" ng-repeat="cartItem in cartItems">
                           <div class="col-md-2 col-lg-2 col-xl-2">
                             <img
-                              src="../media/productImgs/pineapple.jpg"
+                              src="https://10.21.86.182:8000/media/{{cartItem.item__image}}"
                               class="img-fluid rounded-3" alt="Cotton T-shirt">
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-black mb-0">Pineapple</h6>
+                            <h6 class="text-black mb-0">{{cartItem.item__product_name}}</h6>
                           </div>
                           <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                             <button class="btn btn-link px-2"
@@ -45,76 +45,10 @@
                             </button>
                           </div>
                           <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                            <h6 class="mb-0">€ 44.00</h6>
+                            <h6 class="mb-0">₹{{cartItem.item__price}}</h6>
                           </div>
                           <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                             <a href="#!" class="text-muted"><i class="bi bi-x"></i></a>
-                          </div>
-                        </div>
-      
-                        <hr class="my-4">
-      
-                        <div class="row mb-4 d-flex justify-content-between align-items-center">
-                          <div class="col-md-2 col-lg-2 col-xl-2">
-                            <img
-                              src="../media/productImgs/banana.jpg"
-                              class="img-fluid rounded-3" alt="Cotton T-shirt">
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-black mb-0">Banana</h6>
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                            <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                              <i class="bi bi-dash"></i>
-                            </button>
-      
-                            <input id="form1" min="0" name="quantity" value="1" type="number"
-                              class="form-control form-control-sm" />
-      
-                            <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                              <i class="bi bi-plus"></i>
-                            </button>
-                          </div>
-                          <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                            <h6 class="mb-0">€ 44.00</h6>
-                          </div>
-                          <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="#!" class="text-muted"><i class="bi bi-x"></i></a>
-                          </div>
-                        </div>
-      
-                        <hr class="my-4">
-      
-                        <div class="row mb-4 d-flex justify-content-between align-items-center">
-                          <div class="col-md-2 col-lg-2 col-xl-2">
-                            <img
-                              src="../media/productImgs/kiwi.jpg"
-                              class="img-fluid rounded-3" alt="Cotton T-shirt">
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-3">  
-                            <h6 class="text-black mb-0">Kiwi</h6>
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                            <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                              <i class="bi bi-dash"></i>
-                            </button>
-      
-                            <input id="form1" min="0" name="quantity" value="1" type="number"
-                              class="form-control form-control-sm" />
-      
-                            <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                              <i class="bi bi-plus"></i>
-                            </button>
-                          </div>
-                          <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                            <h6 class="mb-0">€ 44.00</h6>
-                          </div>
-                          <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="#!" class="text-muted"><i class="bi bi-x"></i></i></a>
                           </div>
                         </div>
       
@@ -131,13 +65,13 @@
                         <hr class="my-4">
 
                             <div class="d-flex justify-content-between mb-5">
-                                <h5 class="text-uppercase">Total price</h5>
-                                <h5>€ 137.00</h5>
+                                <h5 class="text-uppercase">Total Price</h5>
+                                <h5>₹{{totalPrice}}</h5>
                             </div>
                         <hr class="my-4">
       
                         <button type="button" class="btn btn-dark btn-block btn-lg"
-                          data-mdb-ripple-color="dark">Register</button>
+                          data-mdb-ripple-color="dark" ng-click="order()">Buy now</button>
       
                       </div>
                     </div>
