--- a/template/products.html
+++ b/template/products.html
@@ -49,11 +49,11 @@
     <section class="vh-100 " style="background-color: #eee">
         <div class="container h-100">
             <div class="row d-flex h-100">
-                <div class="col-md-3">
+                <div class="col-md-3" ng-repeat="product in allproducts">
                     <div class="card" style="width: 18rem;">
-                        <img src="media/productImgs/apple.jpg" class="card-img-top" alt="...">
+                        <img src="https://10.21.86.182:8000/media/{{product.image}}" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Apple</h5>
+                            <h5 class="card-title">{{product.product_name}}</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="#" class="btn btn-primary">Add item</a>
